--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <Html>
 <body>
-<center><h1>GitOps</h1>
+<center><h1>GitOps-ArgoCD</h1>
 <h1>Demo for Continuous Deployment on Kubernetes with GitOps and ArgoCD</hi> <br>
 <br>
 <img src='https://raw.githubusercontent.com/Ajaypathak372/cloud-task2/master/task2.jpg' width=600 height=480>
